<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".detail.DetailGameActivity"
    tools:showIn="@layout/activity_detail_game">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_root_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_margin">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/view_error"
            layout="@layout/view_error"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_detail_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/container_root_content"
            app:layout_constraintStart_toStartOf="@id/container_root_content"
            app:layout_constraintTop_toTopOf="@id/container_root_content">

            <TextView
                android:id="@+id/tv_title_original_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_separator"
                android:textSize="@dimen/font_size_subtitle"
                android:text="@string/title_original_name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/container_detail_content"
                app:layout_constraintTop_toTopOf="@+id/container_detail_content" />
            <TextView
                android:id="@+id/tv_original_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_separator"
                android:textSize="@dimen/font_size_text"
                android:text="@string/default_text"
                app:layout_constraintStart_toStartOf="@+id/container_detail_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_original_name" />

            <TextView
                android:id="@+id/tv_title_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:textSize="@dimen/font_size_subtitle"
                android:text="@string/title_rating"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/container_detail_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_original_name" />
            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_separator"
                android:textSize="@dimen/font_size_text"
                android:text="@string/default_text"
                app:layout_constraintStart_toStartOf="@+id/container_detail_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_rating" />


            <TextView
                android:id="@+id/tv_title_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:textSize="@dimen/font_size_subtitle"
                android:text="@string/title_release_date"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/container_detail_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating" />
            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_separator"
                android:textSize="@dimen/font_size_text"
                android:text="@string/default_text"
                app:layout_constraintStart_toStartOf="@+id/container_detail_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_release_date" />


            <TextView
                android:id="@+id/tv_title_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:textSize="@dimen/font_size_subtitle"
                android:text="@string/title_description"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/container_detail_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />
            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_separator"
                android:textSize="@dimen/font_size_text"
                android:text="@string/default_text"
                app:layout_constraintStart_toStartOf="@+id/container_detail_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>